# ChatForProgrammers

./: CMakeLists.txt  res.qrc  widget.cpp  widget.h
Component/BubbleWidget/: CMakeLists.txt  FileWidget.cpp  FileWidget.h  PictureWidget.cpp  PictureWidget.h  TextWidget.cpp  TextWidget.h  TimeWidget.cpp  TimeWidget.h
Component/BubbleWidget/Bubble/: BubbleInfo.cpp  BubbleInfo.h  BubbleItem.cpp  BubbleItem.h
Component/ComApi/: CMakeLists.txt  Utils.h  unit.h
Component/WidgetFrame/: CMakeLists.txt  windowbar.cpp  windowbar.h  windowbar_p.h  windowbutton.cpp  windowbutton.h  windowbutton_p.h
WidgetFrame/: windowbar.h  windowbar_p.h  windowbutton_p.h
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  ChatForProgrammeras_manifest.manifest  ChatForProgrammeras_res.rc  build.ninja  cmake_install.cmake
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-49d33818cd5f55fd856f.json  cache-v2-fb418260e10b496ddf73.json  cmakeFiles-v1-ff0fa2be8e64facf5f72.json  codemodel-v2-54618fec118816ed747c.json  codemodel-v2-9f323bdd371c4e3da52c.json  directory-.-Debug-59e97159993a9cef6c11.json  directory-WidgetFrame-Debug-02b48755ab9a50ee4db3.json  directory-external-modules.qt-easy-logger-main-Debug-1de75289315853ac3b4f.json  directory-external-modules.qwindowkit-main-Debug-2c72599c9b1a32aa57d8.json  directory-external-modules.qwindowkit-main.src-Debug-46d62b957a45c2192e7b.json  directory-external-modules.qwindowkit-main.src.core-Debug-67ecbbec08ccbda6133f.json  index-2024-03-30T06-54-45-0459.json  index-2024-04-03T05-16-06-0786.json  target-ChatForProgrammeras-Debug-4a915c5c60ab1a138b41.json  target-ChatForProgrammeras-Debug-5f2597064c0b79562412.json  target-ChatForProgrammeras_autogen_timestamp_deps-Debug-2cec6e8ce9b7a1ff181f.json  target-ChatForProgrammeras_autogen_timestamp_deps-Debug-bb1ef319c77d855c68b0.json  target-QWKCore-Debug-37af0f5817f8d6de11fb.json  target-QWKCore-Debug-986e2893ae9d18da59cd.json  target-QWKCore_autogen-Debug-c8b14ebbd3b9dd66b097.json  target-QWKWidgets-Debug-1b331dd0e99e0a3724c5.json  target-QWKWidgets_autogen_timestamp_deps-Debug-1caf4bb5bb2bfa52d224.json  target-WidgetFrame-Debug-ad704bc528be0bcdd9ba.json  target-WidgetFrame-Debug-ef72b1131311076a54a5.json  target-WidgetFrame_autogen-Debug-19e4abf4b9ee3d8a5bd8.json  target-WidgetFrame_autogen_timestamp_deps-Debug-add8a421a713609c7d88.json  target-WidgetFrame_autogen_timestamp_deps-Debug-f7c48e7a926c58c6f244.json  target-qt-easy-logger-Debug-1bd445c19749db0753c6.json  (+3 more)
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/ChatForProgrammeras_autogen/: deps  mocs_compilation.cpp
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/ChatForProgrammeras_autogen/3T5WAEFJU2/: moc_LoginDialog.cpp  moc_LoginDialog.cpp.d
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/ChatForProgrammeras_autogen/EWIEGA46WW/: moc_widget.cpp  moc_widget.cpp.d  qrc_res.cpp
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/ChatForProgrammeras_autogen/UVLADIE3JM/: moc_App.cpp  moc_App.cpp.d
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/WidgetFrame/: cmake_install.cmake
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/WidgetFrame/WidgetFrame_autogen/: deps
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/WidgetFrame/WidgetFrame_autogen/EWIEGA46WW/: moc_windowbar.cpp  moc_windowbar.cpp.d  moc_windowbutton.cpp  moc_windowbutton.cpp.d
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/_build/qmsetup/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/_build/qmsetup/src/: cmake_install.cmake
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/external-modules/qt-easy-logger-main/: cmake_install.cmake
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/external-modules/qt-easy-logger-main/qt-easy-logger-sample_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/external-modules/qt-easy-logger-main/qt-easy-logger_autogen/: deps  mocs_compilation.cpp
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/external-modules/qwindowkit-main/: cmake_install.cmake
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/external-modules/qwindowkit-main/src/: cmake_install.cmake
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/lib/WidgetFrame/: cmake_install.cmake
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/lib/WidgetFrame/WidgetFrame_autogen/: deps  mocs_compilation.cpp
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/lib/qt-material/: cmake_install.cmake
build-CharForProgrammers-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/lib/qt-material/qt-material_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
lib/WidgetFrame/: CMakeLists.txt  windowbar.cpp  windowbutton.cpp  windowbutton.h
lib/qt-material/: CMakeLists.txt
resources/: win-icon.aps
resources/theme/: dark-style.qss  light-style.qss
resources/theme/Login/: dark-style.qss
resources/theme/Widget/: dark-style.qss  light-style.qss
src/: App.cpp  App.h  main.cpp
src/FriendPage/: FriendList.cpp  FriendList.h
src/LoginPage/: LoginDialog.cpp  LoginDialog.h
src/MainPage/: CommunicationModel.cpp  CommunicationModel.h  CommunicationView.cpp  CommunicationView.h  MainChatList.cpp  MainChatList.h  MainChatModel.cpp  MainChatModel.h  MainMsgBox.cpp  MainMsgBox.h  MainMsgWidget.cpp  MainMsgWidget.h  SearchWidget.cpp  SearchWidget.h  SendMsgWidget.cpp  SendMsgWidget.h
src/StorePage/: StoreList.cpp  StoreList.h
src/Sys/: CellData.cpp  CellData.h  MiddleWare.cpp  MiddleWare.h  SysConfig.cpp  SysConfig.h
(+1200 files in other folders)
